--- a/TodoList/Views/Customers/ExportToExcel.cshtml
+++ b/TodoList/Views/Customers/ExportToExcel.cshtml
@@ -8,26 +8,45 @@
         <h2>Müşteri Listesi</h2>
         @{
             var customers = Model;
-            Response.AddHeader("Content-disposition", "attachment; filename=urunler.xls");
+            Response.AddHeader("Content-disposition", "attachment; filename=musteriler.xls");
             Response.ContentType = "application/octet-stream";
             var firstLine = customers.FirstOrDefault();
         }
-        <table style="border: 1px solid black;">
-            <tr style="font-weight: bold">
-                @foreach (var property in firstLine.GetType().GetProperties())
-                {
-                    <td style="border: 1px solid #a59f9f;">@Html.DisplayName(property.Name)</td>
-                }
-            </tr>
-            @foreach (var customer in customers)
-            {
-                <tr>
-                    @foreach (var mediaProperty in customer.GetType().GetProperties())
+        @if (firstLine != null)
+        {
+            <table style="border: 1px solid black;">
+                <tr style="font-weight: bold">
+                    @foreach (var property in firstLine.GetType().GetProperties())
                     {
-                        <td style="border: 1px solid black;">@mediaProperty.GetValue(customer, null)</td>
-                    }
+                        if (!property.GetType().GetInterfaces()
+                                .Any(x => x.IsGenericType))
+                        {
+                            <td style="border: 1px solid #a59f9f;">
+                                @{
+                                var dn = (System.ComponentModel.DisplayNameAttribute)property.GetCustomAttributes(typeof(System.ComponentModel.DisplayNameAttribute), true).SingleOrDefault();
+                                var displayName = (dn != null ? dn.DisplayName : property.Name);
+                            }
+                            @displayName
+                        </td>
+
+                                    }
+                                }
                 </tr>
-            }
-        </table>
+                @foreach (var customer in customers)
+                {
+                    <tr>
+                        @foreach (var customerProperty in customer.GetType().GetProperties())
+                        {
+                            if (!customerProperty.GetType().GetInterfaces()
+                                 .Any(x => x.IsGenericType))
+
+                            {
+                                <td style="border: 1px solid black;">@customerProperty.GetValue(customer, null)</td>
+                            }
+                        }
+                    </tr>
+                }
+            </table>
+                                }
     </div>
 </body>
