--- a/TodoList/Views/Categories/Details.cshtml
+++ b/TodoList/Views/Categories/Details.cshtml
@@ -53,6 +53,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Düzenle", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Düzenle", "Edit", new { id = Model.Id }, new { @class = "btn btn-primary" }) |
     @Html.ActionLink("Listeye Geri Dön", "Index")
 </p>
