--- a/TodoList/Views/Shared/_Layout.cshtml
+++ b/TodoList/Views/Shared/_Layout.cshtml
@@ -110,7 +110,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="page_user_login_1.html">
+                                    <a href="@Url.Action("Login","Account")">
                                         <i class="icon-key"></i> Log Out
                                     </a>
                                 </li>
