TodoItem Yazı Düzenlemesi

--- a/TodoList/Views/TodoItems/Details.cshtml
+++ b/TodoList/Views/TodoItems/Details.cshtml
@@ -7,7 +7,7 @@
 <h2>Ayrıntılar</h2>
 
 <div>
-    <h4>Yapılacak İş</h4>
+    <h4>Yapılacaklar</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
