--- a/TodoList/Views/TodoItems/ExportToExcel.cshtml
+++ b/TodoList/Views/TodoItems/ExportToExcel.cshtml
@@ -3,7 +3,7 @@
     Layout = null;
 }
 <div>
-    <h2>şĞ Listesi</h2>
+    <h2>Yapılacaklar Listesi</h2>
     @{
         var todoitems = Model;
         Response.AddHeader("Content-disposition", "attachment; filename=yapılacaklar.xls");
