--- a/TodoList/Views/TodoItems/Index.cshtml
+++ b/TodoList/Views/TodoItems/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Yapılacak İş";
 }
 
-<h2>Yapılacak İş</h2>
+<h2>Yapılacaklar</h2>
 
 <p>
     @Html.ActionLink("Yeni Oluştur", "Create",null, new { @class = "btn btn-primary" })
