--- a/TodoList/Views/TodoItems/Delete.cshtml
+++ b/TodoList/Views/TodoItems/Delete.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Silmek istediğinize emin misiniz?</h3>
 <div>
-    <h4>Yapılacak İş</h4>
+    <h4>Yapılacaklar</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
