--- a/TodoList/Views/Contacts/Index.cshtml
+++ b/TodoList/Views/Contacts/Index.cshtml
@@ -8,6 +8,8 @@
 
 <p>
     @Html.ActionLink("Yeni Oluştur", "Create", null, new { @class = "btn btn-primary" })
+    <a class="dt-button buttons-excel buttons-html5 btn yellow btn-outline" tabindex="0" aria-controls="sample_1" href="@Url.Action("ExporttoExcel","Contacts")" style="float:right;"><span>Excel</span></a>
+    <a class="dt-button buttons-csv buttons-html5 btn purple btn-outline" tabindex="0" aria-controls="sample_1" href="#" style="float:right;"><span>CSV</span></a>
 </p>
 <table id="tblRecords"class="table">
     <thead>
