--- a/TodoList/Views/Departments/Index.cshtml
+++ b/TodoList/Views/Departments/Index.cshtml
@@ -8,9 +8,8 @@
 
 <p>
     @Html.ActionLink("Yeni Oluştur", "Create", null, new { @class = "btn btn-primary" })
-    <a class="dt-button buttons-excel buttons-html5 btn yellow btn-outline" tabindex="0" aria-controls="sample_1" href="@Url.Action("ExportToExcel","Departments")" style="float:right;"><span>Excel</span></a>
-    <a class="dt-button buttons-csv buttons-html5 btn purple btn-outline" tabindex="0" aria-controls="sample_1" href="@Url.Action("ExportToCsv","Departments")" style="float:right;"><span>CSV</span></a>
-
+    <a class="dt-button buttons-excel buttons-html5 btn yellow btn-outline" tabindex="0" aria-controls="sample_1" href="@Url.Action("ExportToExcel","Departments")" style="float:right;"><span>Excel Aktar</span></a>
+    <a class="dt-button buttons-csv buttons-html5 btn purple btn-outline" tabindex="0" aria-controls="sample_1" href="@Url.Action("ExportToCsv","Departments")" style="float:right;"><span>Csv Aktar</span></a>
 </p>
 <table id="tblRecords" class="table">
     <thead>
