excele aktar yazısı

--- a/TodoList/Views/Sides/Index.cshtml
+++ b/TodoList/Views/Sides/Index.cshtml
@@ -8,7 +8,7 @@
 
 <p>
     @Html.ActionLink("Yeni Oluştur", "Create", null, new { @class = "btn btn-primary" })
-    <a class="dt-button buttons-excel buttons-html5 btn yellow btn-outline" tabindex="0" aria-controls="sample_1" href="@Url.Action("ExportToExcel","Sides")" style="float:right;"><span>Excel</span></a>
+    <a class="dt-button buttons-excel buttons-html5 btn yellow btn-outline" tabindex="0" aria-controls="sample_1" href="@Url.Action("ExportToExcel","Sides")" style="float:right;"><span>Excele Aktar</span></a>
     <a class="dt-button buttons-csv buttons-html5 btn purple btn-outline" tabindex="0" aria-controls="sample_1" href="@Url.Action("ExportToCsv","Sides")" style="float:right;"><span>CSV</span></a>
 
 </p>
