--- a/TodoList/Views/Account/Login.cshtml
+++ b/TodoList/Views/Account/Login.cshtml
@@ -107,13 +107,13 @@ License: You must have a valid license purchased only from themeforest(the above
                 <h4>Şifrenizi mi Unuttunuz ?</h4>
                 <p>
                     Şifrenizi sıfırlamak için
-                    <a href="javascript:;" id="forget-password" target="_blank"> Buraya </a> tıklayın.
+                    <a href="@Url.Action("ForgotPassword","Account")" id="forget-password" target="_blank"> Buraya </a> tıklayın.
                 </p>
             </div>
         }
         <!-- END LOGIN FORM -->
         <!-- BEGIN FORGOT PASSWORD FORM -->
-        <form class="forget-form" action="~/Views/Account/ForgotPassword.cshtml" method="post">
+        @*<form class="forget-form" action="~/Views/Account/ForgotPassword.cshtml" method="post">
             <h3>Şifrenizi Unuttunuz Mu ?</h3>
             <p> Şifrenizi sıfırlamak için E-Posta adresinizi girin. </p>
             <div class="form-group">
@@ -126,7 +126,7 @@ License: You must have a valid license purchased only from themeforest(the above
                 <button type="button" id="back-btn" class="btn red btn-outline">Geri</button>
                 <button type="submit" class="btn green pull-right"> Gönder </button>
             </div>
-        </form>
+        </form>*@
 
         <!-- END FORGOT PASSWORD FORM -->
 
