--- a/TodoList/Views/Contacts/ExportToExcel.cshtml
+++ b/TodoList/Views/Contacts/ExportToExcel.cshtml
@@ -3,31 +3,52 @@
     Layout = null;
 }
 
-<body>
-    <div>
-        <h2>Kisi Listesi</h2>
-        @{
-            var contacts = Model;
-            Response.AddHeader("Content-disposition", "attachment; filename=contacts.xls");
-            Response.ContentType = "application/octet-stream";
-            var firstLine = contacts.FirstOrDefault();
-        }
+<div>
+    <h2>Kişi Listesi</h2>
+    @{
+        var contacts = Model;
+        Response.AddHeader("Content-disposition", "attachment; filename=medias.xls");
+        Response.ContentType = "application/octet-stream";
+        var firstLine = contacts.FirstOrDefault();
+
+    }
+
+
+
+    @if (firstLine != null)
+    {
         <table style="border: 1px solid black;">
             <tr style="font-weight: bold">
                 @foreach (var property in firstLine.GetType().GetProperties())
                 {
-                    <td style="border: 1px solid #a59f9f;">@Html.DisplayName(property.Name)</td>
-                }
+                    if (!property.GetType().GetInterfaces()
+                            .Any(x => x.IsGenericType))
+                    {
+                        <td style="border: 1px solid #a59f9f;">
+                            @{
+                                var dn = (System.ComponentModel.DisplayNameAttribute)property.GetCustomAttributes(typeof(System.ComponentModel.DisplayNameAttribute), true).SingleOrDefault();
+                                var displayName = (dn != null ? dn.DisplayName : property.Name);
+                            }
+                            @displayName
+                        </td>
+
+                                    }
+                                }
             </tr>
             @foreach (var contact in contacts)
             {
                 <tr>
                     @foreach (var contactProperty in contact.GetType().GetProperties())
                     {
-                        <td style="border: 1px solid black;">@contactProperty.GetValue(contact, null)</td>
+                        if (!contactProperty.GetType().GetInterfaces()
+                             .Any(x => x.IsGenericType))
+
+                        {
+                            <td style="border: 1px solid black;">@contactProperty.GetValue(contact, null)</td>
+                        }
                     }
                 </tr>
             }
         </table>
-    </div>
-</body>
+                                }
+</div>
