--- a/TodoList/Views/Home/Index.cshtml
+++ b/TodoList/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
         </a>
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-        <a class="dashboard-stat dashboard-stat-v2 red" href="#">
+        <a class="dashboard-stat dashboard-stat-v2 red" href="@Url.Action("Index","TodoItems")">
             <div class="visual">
                 <i class="icon-layers"></i>
             </div>
@@ -41,7 +41,7 @@
         </a>
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-        <a class="dashboard-stat dashboard-stat-v2 green" href="#">
+        <a class="dashboard-stat dashboard-stat-v2 green" href="@Url.Action("Index","TodoItems")">
             <div class="visual">
                 <i class="icon-hourglass"></i>
             </div>
@@ -54,7 +54,7 @@
         </a>
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-        <a class="dashboard-stat dashboard-stat-v2 purple" href="#">
+        <a class="dashboard-stat dashboard-stat-v2 purple" href="@Url.Action("Index","TodoItems")">
             <div class="visual">
                 <i class="icon-check"></i>
             </div>
