--- a/TodoList/Views/Shared/_Layout.cshtml
+++ b/TodoList/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@ License: You must have a valid license purchased only from themeforest(the above
                 <!-- BEGIN LOGO -->
                 <div class="page-logo">
                     <a href="/">
-                        <img src="~/Content/image/AcıBademLogo.png" alt="logo" class="logo-default" style="width:100px; height:30px; margin-top:10px!important;"/>
+                        <img src="~/Content/image/AcıBademLogo.png" alt="logo" class="logo-default" style="width:100px; height:30px; margin-top:10px!important;" />
                     </a>
                     <div class="menu-toggler sidebar-toggler">
                         <span></span>
@@ -70,10 +70,10 @@ License: You must have a valid license purchased only from themeforest(the above
                 <!-- BEGIN TOP NAVIGATION MENU -->
                 <div class="top-menu">
                     <ul class="nav navbar-nav pull-right">
-                      
-                      
-                     
-                     
+
+
+
+
                         <li class="dropdown dropdown-user">
                             <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
                                 <img alt="" class="img-circle" src="/assets/layouts/layout/img/avatar3_small.jpg" />
@@ -122,22 +122,22 @@ License: You must have a valid license purchased only from themeforest(the above
                                 <i class="icon-logout"></i>
                             </a>
                         </li>
-                    
+
                     </ul>
                 </div>
                 <!-- END TOP NAVIGATION MENU -->
             </div>
             <!-- END HEADER INNER -->
         </div>
-     
+
         <div class="clearfix"> </div>
-     
+
         <div class="page-container">
             <!-- BEGIN SIDEBAR -->
             <div class="page-sidebar-wrapper">
-              
+
                 <div class="page-sidebar navbar-collapse collapse">
-                 
+
                     <ul class="page-sidebar-menu  page-header-fixed " data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200" style="padding-top: 20px">
                         <!-- DOC: To remove the sidebar toggler from the sidebar you just need to completely remove the below "sidebar-toggler-wrapper" LI element -->
                         <!-- BEGIN SIDEBAR TOGGLER BUTTON -->
@@ -146,7 +146,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                 <span></span>
                             </div>
                         </li>
-                      
+
                         <li class="nav-item start ">
                             <a href="javascript:;" class="nav-link nav-toggle">
                                 <i class="icon-home"></i>
@@ -160,7 +160,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                         <span class="title">Giriş</span>
                                     </a>
                                 </li>
-                              
+
                             </ul>
                         </li>
                         <li class="heading">
@@ -214,7 +214,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                 <li class="nav-item  ">
                                     <a href="@Url.Action("Index","Contacts")" class="nav-link ">
                                         <span class="title">
-                                          
+
                                             Tüm Kişiler
 
                                         </span>
@@ -223,7 +223,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                 <li class="nav-item  ">
                                     <a href="@Url.Action("Create","Contacts")" class="nav-link ">
                                         <span class="title">
-                                          Kişi Ekle
+                                            Kişi Ekle
                                         </span>
                                     </a>
                                 </li>
@@ -231,7 +231,7 @@ License: You must have a valid license purchased only from themeforest(the above
                         </li>
                         <li class="nav-item  ">
                             <a href="javascript:;" class="nav-link nav-toggle">
-                                <i class="glyphicon glyphicon-folder-open" ></i>
+                                <i class="glyphicon glyphicon-folder-open"></i>
                                 <span class="title">Dosyalar</span>
                                 <span class="arrow"></span>
                             </a>
@@ -265,11 +265,11 @@ License: You must have a valid license purchased only from themeforest(the above
                                         <span class="title">Kategori Ekle</span>
                                     </a>
                                 </li>
-                              
+
                             </ul>
-                         </li>
-                        
-                      
+                        </li>
+
+
                         <li class="nav-item  ">
                             <a href="?p=" class="nav-link nav-toggle">
                                 <i class="glyphicon glyphicon-list-alt"></i>
@@ -306,7 +306,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                         <span class="title">Taraf Ekle</span>
                                     </a>
                                 </li>
-                                
+
                             </ul>
                         </li>
                         <li class="nav-item  ">
@@ -341,24 +341,84 @@ License: You must have a valid license purchased only from themeforest(the above
                 <div class="page-content">
                     <!-- BEGIN PAGE HEADER-->
                     <!-- BEGIN THEME PANEL -->
-                    
                     <!-- END THEME PANEL -->
                     <!-- BEGIN PAGE BAR -->
                     <div class="page-bar">
                         <ul class="page-breadcrumb">
                             <li>
-                                <a href="index.html">Home</a>
+                                <a href="/">Anasayfa</a>
                                 <i class="fa fa-circle"></i>
                             </li>
                             <li>
-                                <a href="#">Blank Page</a>
+                                @switch (ViewContext.RouteData.Values["controller"].ToString().ToLowerInvariant())
+                                {
+                                    case "categories":
+                                        @Html.Raw("Kategoriler");
+                                        break;
+                                    case "contacts":
+                                        @Html.Raw("Kişiler");
+                                        break;
+                                    case "customers":
+                                        @Html.Raw("Müşteriler");
+                                        break;
+                                    case "departments":
+                                        @Html.Raw("Departmanlar");
+                                        break;
+                                    case "manage":
+                                        @Html.Raw("Yönetim");
+                                        break;
+                                    case "todoitems":
+                                        @Html.Raw("Yapılacaklar");
+                                        break;
+                                    case "media":
+                                        @Html.Raw("Dosyalar");
+                                        break;
+                                    case "sides":
+                                        @Html.Raw("Taraflar");
+                                        break;
+                                    case "applicationusers":
+                                        @Html.Raw("Kullanıcılar");
+                                        break;
+                                    case "account":
+                                        @Html.Raw("Hesap");
+                                        break;
+                                    default:
+                                        @Html.Raw(ViewContext.RouteData.Values["controller"].ToString());
+                                        break;
+                                }
+
                                 <i class="fa fa-circle"></i>
                             </li>
                             <li>
-                                <span>Page Layouts</span>
+                                <span>
+                                    @switch (ViewContext.RouteData.Values["action"].ToString().ToLowerInvariant())
+                                    {
+                                        case "index":
+                                            @Html.Raw("Tümü");
+                                            break;
+                                        case "create":
+                                            @Html.Raw("Oluştur");
+                                            break;
+                                        case "edit":
+                                            @Html.Raw("Düzenle");
+                                            break;
+                                        case "delete":
+                                            @Html.Raw("Sil");
+                                            break;
+                                        case "details":
+                                            @Html.Raw("Detay");
+                                            break;
+                                        case "register":
+                                            @Html.Raw("Kayıt Ol");
+                                            break;
+                                        default:
+                                            @Html.Raw(ViewContext.RouteData.Values["action"].ToString());
+                                            break;
+                                    }
+                                </span>
                             </li>
                         </ul>
-                    
+
                     </div>
                     <!-- END PAGE BAR -->
                     @RenderBody()
@@ -970,9 +1030,9 @@ License: You must have a valid license purchased only from themeforest(the above
         <!-- BEGIN FOOTER -->
         <div class="page-footer">
             <div class="page-footer-inner">
-                2017 &copy; Acıbadem Sigorta 
+                2017 &copy; Acıbadem Sigorta
                 <a target="_blank" href="http://keenthemes.com"></a> &nbsp;|&nbsp;
-               TodoList
+                TodoList
             </div>
             <div class="scroll-to-top">
                 <i class="icon-arrow-up"></i>
@@ -980,7 +1040,7 @@ License: You must have a valid license purchased only from themeforest(the above
         </div>
         <!-- END FOOTER -->
     </div>
-   
+
     <div class="quick-nav-overlay"></div>
     <script src="~/assets/global/plugins/jquery.min.js" type="text/javascript"></script>
     <script src="~/assets/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
@@ -1050,6 +1110,6 @@ License: You must have a valid license purchased only from themeforest(the above
             });
         });
     </script>
-    @RenderSection("scripts", required:false)
+    @RenderSection("scripts", required: false)
 </body>
 </html>
