--- a/TodoList/Views/Account/Login.cshtml
+++ b/TodoList/Views/Account/Login.cshtml
@@ -59,7 +59,7 @@ License: You must have a valid license purchased only from themeforest(the above
     <!-- BEGIN LOGO -->
     <div class="logo">
         <a href="index.html">
-            <img src="~/Content/image/acibadem-sigorta-giris.png" alt="" style="width:520px;height:200px;" />
+            <img src="~/Content/image/acibadem-sigorta-giris.png" alt="" style="width:369px;height:auto;" />
         </a>
     </div>
     <!-- END LOGO -->
