--- a/TodoList/Views/Sides/Index.cshtml
+++ b/TodoList/Views/Sides/Index.cshtml
@@ -12,7 +12,7 @@
     <a class="dt-button buttons-csv buttons-html5 btn purple btn-outline" tabindex="0" aria-controls="sample_1" href="@Url.Action("ExportToCsv","Sides")" style="float:right;"><span>CSV</span></a>
 
 </p>
-<table id="tblRecords" class="table">
+<table id="tblRecords" class="table table-striped table-hover">
     <thead>
     <tr>
         <th  class="text-nowrap all">
