--- a/TodoList/Views/Shared/_Layout.cshtml
+++ b/TodoList/Views/Shared/_Layout.cshtml
@@ -345,10 +345,10 @@ License: You must have a valid license purchased only from themeforest(the above
                     <!-- BEGIN PAGE BAR -->
                     <div class="page-bar">
                         <ul class="page-breadcrumb">
-                            <li>
+                            @*<li>
                                 <a href="/">Anasayfa</a>
                                 <i class="fa fa-circle"></i>
-                            </li>
+                            </li>*@
                             <li>
                                 @switch (ViewContext.RouteData.Values["controller"].ToString().ToLowerInvariant())
                                 {
@@ -381,6 +381,9 @@ License: You must have a valid license purchased only from themeforest(the above
                                         break;
                                     case "account":
                                         @Html.Raw("Hesap");
+                                        break;
+                                    case "home":
+                                        @Html.Raw("Giriş");
                                         break;
                                     default:
                                         @Html.Raw(ViewContext.RouteData.Values["controller"].ToString());
