--- a/TodoList/Views/Account/Login.cshtml
+++ b/TodoList/Views/Account/Login.cshtml
@@ -64,7 +64,7 @@ License: You must have a valid license purchased only from themeforest(the above
     </div>
     <!-- END LOGO -->
     <!-- BEGIN LOGIN -->
-    <div class="content">
+    <div class="content" style="margin-top:-25px;">
         <!-- BEGIN LOGIN FORM -->
      @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal",role = "form"}))
 
