--- a/TodoList/Views/Account/ForgotPassword.cshtml
+++ b/TodoList/Views/Account/ForgotPassword.cshtml
@@ -1,6 +1,7 @@
 ﻿@model TodoList.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Şifrenizi Unuttunuz mu ?";
+    Layout = null;
 }
 
 <h2>@ViewBag.Title.</h2>
