--- a/TodoList/Views/Media/Create.cshtml
+++ b/TodoList/Views/Media/Create.cshtml
@@ -3,11 +3,21 @@
 @{
     ViewBag.Title = "Yeni Medya";
 }
-
+<link href="/assets/global/plugins/dropzone/dropzone.min.css" rel="stylesheet" type="text/css" />
+<link href="/assets/global/plugins/dropzone/basic.min.css" rel="stylesheet" type="text/css" />
 <h2>Oluştur</h2>
+<style>
+    #my-dropzone {
+        background: gray;
+        border: black dashed 3px;
+        width: 450px;
+        padding: 50px;
+        text-align: center;
+        color: white;
+    }
+</style>
 
-
-@using (Html.BeginForm("Create", "Media", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Create", "Media", FormMethod.Post, new { enctype = "multipart/form-data"}))
 {
     @Html.AntiForgeryToken()
     
@@ -31,19 +41,25 @@
             </div>
         </div>
         @Html.HiddenFor(model => model.Extension)
-        
-
+        @Html.HiddenFor(model => model.ContentType)
         <div class="form-group">
             <label class="control-label col-md-2">Dosya:</label>
             <div class="col-md-10">
-                <input type="file" name="upload" id="upload" required />
+                @Html.EditorFor(model => model.FilePath, new { htmlAttributes= new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.FilePath, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-md-2">Dosya:</label>
+            <div class="col-md-10 dropzone dropzone-file-area" id="my-dropzone">
+                <h3 class="sbold">Dosyayı buraya sürükleyin ve tıklayın.</h3>
             </div>
         </div>
 
       
                 @Html.HiddenFor(model => model.FileSize)
-                @Html.HiddenFor(model => model.Year, new {@Value=Model.Year.ToString(DateTime.Now.Year.ToString())} )
-                @Html.HiddenFor(model => model.Month, new {@Value = Model.Year.ToString(DateTime.Now.Month.ToString()) })
+                @Html.HiddenFor(model => model.Year, new {@Value=DateTime.Now.Year.ToString()} )
+                @Html.HiddenFor(model => model.Month, new {@Value = DateTime.Now.Month.ToString() })
                
         @Html.HiddenFor(model => model.CreateDate)
 
@@ -66,5 +82,18 @@
 </div>
 
 @section Scripts {
+    <script src="/assets/global/plugins/dropzone/dropzone.min.js" type="text/javascript"></script>
+    <script>
+        $("div#my-dropzone").dropzone({
+            url: "/Media/SaveUploadedFile", init: function () {
+                this.on("complete", function (data) {
+                    //var res = eval('(' + data.xhr.responseText + ')');
+                    var res = JSON.parse(data.xhr.responseText);
+                    $("#FilePath").val(res.Message);
+                });
+            } });
+        //File Upload response from the server
+     
+    </script>
     @Scripts.Render("~/bundles/jqueryval")
 }
