medya ismi dosya olarak değiştirildi

--- a/TodoList/Views/Media/Index.cshtml
+++ b/TodoList/Views/Media/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Medyalar";
 }
 
-<h2>Medyalar</h2>
+<h2>Dosyalar</h2>
 
 <p>
     @Html.ActionLink("Yeni Oluştur", "Create", null, new { @class = "btn btn-primary" })
