file upload small fixes

--- a/TodoList/Views/Media/Edit.cshtml
+++ b/TodoList/Views/Media/Edit.cshtml
@@ -59,9 +59,9 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-md-2">Dosya:</label>
+            <label class="control-label col-md-2">Dosya Yükle:</label>
             <div class="col-md-10 dropzone dropzone-file-area" id="my-dropzone">
-                <h3 class="sbold">Dosyayı buraya sürükleyin ve tıklayın.</h3>
+                <h3 class="sbold">Dosyayı buraya sürükleyin veya tıklayın.</h3>
             </div>
         </div>
 
